--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+    <fragment
+        android:id="@+id/mainMp4fragment"
+        android:name="com.feicuiedu.treasure_20170327.MainMP4Fragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
