--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,7 +5,27 @@
     android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <!--主页面显示-->
+    <include
+        android:id="@+id/home"
+        layout="@layout/content_home"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+    <!--采用Design包里面的控件NavigationView-->
+    <!--设置菜单项、添加头布局、设置item的文本等-->
+    <android.support.design.widget.NavigationView
+        android:id="@+id/navigation"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:layout_marginTop="?attr/actionBarSize"
+        app:menu="@menu/menu_drawer"
+        app:headerLayout="@layout/layout_navi_header"
+        app:itemTextColor="@color/selector_nav_icon_colors"
+        ></android.support.design.widget.NavigationView>
 
 </android.support.v4.widget.DrawerLayout>
