--- a/app/src/main/res/layout/layout_navi_header.xml
+++ b/app/src/main/res/layout/layout_navi_header.xml
@@ -9,7 +9,6 @@
 
 
     <!--圆形头像-->
-    <!--
     <com.pkmmte.view.CircularImageView
         android:id="@+id/iv_usericon"
         android:layout_width="@dimen/dp_100"
@@ -20,12 +19,12 @@
         app:border_color="#16f5f5f5"
         app:border_width="@dimen/dp_8"
         />
-    -->
 
     <TextView
         android:id="@+id/user_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/iv_usericon"
         android:text="@string/treasure_expert"
         android:textSize="16sp"
         android:textColor="@android:color/white"
