--- a/app/src/main/res/layout/content_account.xml
+++ b/app/src/main/res/layout/content_account.xml
@@ -14,25 +14,16 @@
         android:orientation="vertical">
 
         <!--圆形头像-->
-        <!--
         <com.pkmmte.view.CircularImageView
-            android:id="@+id/iv_userIcon"
+            android:id="@+id/iv_usericon"
             android:layout_width="@dimen/dp_100"
             android:layout_height="@dimen/dp_100"
-            android:layout_centerInParent="true"
-            android:scaleType="centerInside"
             android:src="@mipmap/user_icon"
+            android:layout_centerInParent="true"
             app:border="true"
             app:border_color="#16f5f5f5"
             app:border_width="@dimen/dp_8"
-            app:layout_collapseMode="parallax"
-            app:layout_collapseParallaxMultiplier="-1"
-            app:shadow="false"
-            app:selector="true"
-            app:selector_color="#4D000000"
-            app:selector_stroke_width="@dimen/dp_8"
-            app:selector_stroke_color="#16f5f5f5"/>
-        -->
+            />
 
         <TextView
             android:layout_centerHorizontal="true"
@@ -41,6 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/dp_10"
+            android:layout_below="@id/iv_usericon"
             android:textSize="@dimen/sp_16"
             android:text="@string/treasure_expert"
             android:textColor="@android:color/white" />
